# cplucplus-qt6-rock-paper-scissors_game

./: CMakeLists.txt  Database.js  End_Page.qml  Game_Page.qml  Home_Page.qml  Main.qml  Player_Phase.qml  Result_Phase.qml  main.cpp  qml.qrc
